--- a/index.html
+++ b/index.html
@@ -7,4 +7,10 @@
 <body>
 <!-- Conteúdo -->
 </body>
-</html>
+</html>header>
+    <img src="" alt="">
+    <ul>
+        <li>Escola</li>
+        <li>Estudante</li>
+    </ul>
+</header>
