--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
         <li>Escola</li>
         <li>Estudante</li>
     </ul>
-</header>
+</header><img src="alurastart logo.png" alt="">
+<img src="alurastart logo.png" alt="logo da alura start">
