--- a/index.html
+++ b/index.html
@@ -14,4 +14,26 @@
         <li>Estudante</li>
     </ul>
 </header><img src="alurastart logo.png" alt="">
-<img src="alurastart logo.png" alt="logo da alura start">
+<img src="alurastart logo.png" alt="logo da alura start"><header class="cabecalho">
+        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
+        </ul>.<html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Document</title>
+            <link rel="stylesheet" href="style.css">
+        </head>
+        <body>
+            <header class="cabecalho">
+                <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+                <ul class="cabecalho-lista">
+                    <li class="cabecalho-lista-item">Escola</li>
+                    <li class="cabecalho-lista-item">Estudante</li>
+                </ul>
+            </header>
+        </body>
+        </html>
